{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 1215,
  "lineage": "1496b0a1-3b2b-a9ed-70ff-08617835f272",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "alb-log-pragmatic1-terraform",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:loadbalancer/app/example/843f08a4d0a932b5",
            "arn_suffix": "app/example/843f08a4d0a932b5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-506794354.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:loadbalancer/app/example/843f08a4d0a932b5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example",
            "preserve_host_header": false,
            "security_groups": [
              "sg-097ec1fd934cbbcfc",
              "sg-0a19675e2055703e3",
              "sg-0bba20f96c9df4ab3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0119be8ed52f832d4"
              },
              {
                "subnet_id": "subnet-0bda924a2b2d2fa4e"
              }
            ],
            "subnets": [
              "subnet-0119be8ed52f832d4",
              "subnet-0bda924a2b2d2fa4e"
            ],
            "vpc_id": "vpc-0395c35850d47925c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_s3_bucket.alb_log",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default",
            "module.vpc.aws_subnet.public_0",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/843f08a4d0a932b5/9bbe3a2054625b96",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "これは『HTTP』である。",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/843f08a4d0a932b5/9bbe3a2054625b96",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:loadbalancer/app/example/843f08a4d0a932b5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_s3_bucket.alb_log",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default",
            "module.vpc.aws_subnet.public_0",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/843f08a4d0a932b5/d7ed88dadec9b242",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:730054542356:certificate/f44f33c4-e639-49cb-b0fc-12944634e70c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "これは『HTTPS』である。",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/843f08a4d0a932b5/d7ed88dadec9b242",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:loadbalancer/app/example/843f08a4d0a932b5",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.example",
            "aws_lb.example",
            "aws_route53_record.example",
            "aws_s3_bucket.alb_log",
            "data.aws_route53_zone.example",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default",
            "module.vpc.aws_subnet.public_0",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "redirect_http_to_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/843f08a4d0a932b5/f011eccdb900065f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/843f08a4d0a932b5/f011eccdb900065f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:loadbalancer/app/example/843f08a4d0a932b5",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_s3_bucket.alb_log",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default",
            "module.vpc.aws_subnet.public_0",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:targetgroup/example/bf157c6eeed7f02b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener-rule/app/example/843f08a4d0a932b5/d7ed88dadec9b242/4158fa42a8469565",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener-rule/app/example/843f08a4d0a932b5/d7ed88dadec9b242/4158fa42a8469565",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:listener/app/example/843f08a4d0a932b5/d7ed88dadec9b242",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.example",
            "aws_lb.example",
            "aws_lb_listener.https",
            "aws_lb_target_group.example",
            "aws_route53_record.example",
            "aws_s3_bucket.alb_log",
            "data.aws_route53_zone.example",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default",
            "module.vpc.aws_subnet.public_0",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:targetgroup/example/bf157c6eeed7f02b",
            "arn_suffix": "targetgroup/example/bf157c6eeed7f02b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:730054542356:targetgroup/example/bf157c6eeed7f02b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "dependencies": [
            "aws_lb.example",
            "aws_s3_bucket.alb_log",
            "module.http_redirect_sg.aws_security_group.default",
            "module.http_sg.aws_security_group.default",
            "module.https_sg.aws_security_group.default",
            "module.vpc.aws_subnet.public_0",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-0a19675e2055703e3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a19675e2055703e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "http_redirect_sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-345123051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a19675e2055703e3",
            "security_group_rule_id": "sgr-0dabd6e1f31ecdfde",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_redirect_sg.aws_security_group.default",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.http_redirect_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-2115378156",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a19675e2055703e3",
            "security_group_rule_id": "sgr-0eef6a79422e9dd99",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_redirect_sg.aws_security_group.default",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-097ec1fd934cbbcfc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097ec1fd934cbbcfc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http_sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3249108268",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-097ec1fd934cbbcfc",
            "security_group_rule_id": "sgr-027510cc0f698caef",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_sg.aws_security_group.default",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.http_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-19680739",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-097ec1fd934cbbcfc",
            "security_group_rule_id": "sgr-0e98229ed4ad9b963",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_sg.aws_security_group.default",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-0bba20f96c9df4ab3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bba20f96c9df4ab3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "https_sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1047465992",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0bba20f96c9df4ab3",
            "security_group_rule_id": "sgr-05a382b53eaaf8aec",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.https_sg.aws_security_group.default",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.https_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2778766621",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bba20f96c9df4ab3",
            "security_group_rule_id": "sgr-0d3bb42a887b9e41a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.https_sg.aws_security_group.default",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0ed648ce01a111a",
            "association_id": "eipassoc-07f2d16a57f94ba01",
            "domain": "vpc",
            "id": "eipalloc-0f0ed648ce01a111a",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-04f1895d99891a708",
            "private_dns": "ip-10-0-0-148.ap-northeast-1.compute.internal",
            "private_ip": "10.0.0.148",
            "public_dns": "ec2-18-176-137-28.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.176.137.28",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b53483fc1cd3500",
            "association_id": "eipassoc-00d32a43b3ad987b1",
            "domain": "vpc",
            "id": "eipalloc-08b53483fc1cd3500",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-01549f5c86504f0a7",
            "private_dns": "ip-10-0-1-211.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.211",
            "public_dns": "ec2-57-180-82-184.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "57.180.82.184",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0116a81720af5efe2",
            "association_id": "eipassoc-0839f38f0617be2e1",
            "domain": "vpc",
            "id": "eipalloc-0116a81720af5efe2",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-041f8f88fde1e663d",
            "private_dns": "ip-10-0-2-158.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.158",
            "public_dns": "ec2-176-34-22-248.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "176.34.22.248",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:internet-gateway/igw-0ffc37a5079ec476a",
            "id": "igw-0ffc37a5079ec476a",
            "owner_id": "730054542356",
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0ed648ce01a111a",
            "association_id": "eipassoc-07f2d16a57f94ba01",
            "connectivity_type": "public",
            "id": "nat-0a3a148361c4d02ab",
            "network_interface_id": "eni-04f1895d99891a708",
            "private_ip": "10.0.0.148",
            "public_ip": "18.176.137.28",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08b6401c11ffa0399"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b53483fc1cd3500",
            "association_id": "eipassoc-00d32a43b3ad987b1",
            "connectivity_type": "public",
            "id": "nat-058a4d71dde828872",
            "network_interface_id": "eni-01549f5c86504f0a7",
            "private_ip": "10.0.1.211",
            "public_ip": "57.180.82.184",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0119be8ed52f832d4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_0",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_subnet.public_0",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0116a81720af5efe2",
            "association_id": "eipassoc-0839f38f0617be2e1",
            "connectivity_type": "public",
            "id": "nat-0fdeea68d30d34f7e",
            "network_interface_id": "eni-041f8f88fde1e663d",
            "private_ip": "10.0.2.158",
            "public_ip": "176.34.22.248",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bda924a2b2d2fa4e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_1",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e1ce42dd0a21b57a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a3a148361c4d02ab",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e1ce42dd0a21b57a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_nat_gateway.example",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06fb3502568e3172d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-058a4d71dde828872",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06fb3502568e3172d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_0",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_nat_gateway.nat_gateway_0",
            "module.vpc.aws_route_table.private_0",
            "module.vpc.aws_subnet.public_0",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09699e0a260cd4a7b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fdeea68d30d34f7e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09699e0a260cd4a7b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_1",
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_nat_gateway.nat_gateway_1",
            "module.vpc.aws_route_table.private_1",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ffc37a5079ec476a",
            "id": "r-rtb-0f243d4fe98dab7671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f243d4fe98dab767",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.example",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-0e1ce42dd0a21b57a",
            "id": "rtb-0e1ce42dd0a21b57a",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a3a148361c4d02ab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-06fb3502568e3172d",
            "id": "rtb-06fb3502568e3172d",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-058a4d71dde828872",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-09699e0a260cd4a7b",
            "id": "rtb-09699e0a260cd4a7b",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fdeea68d30d34f7e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:route-table/rtb-0f243d4fe98dab767",
            "id": "rtb-0f243d4fe98dab767",
            "owner_id": "730054542356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffc37a5079ec476a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006508cd3eea00670",
            "route_table_id": "rtb-0e1ce42dd0a21b57a",
            "subnet_id": "subnet-08609864a2b9937ce"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a74a5243e7e016c2",
            "route_table_id": "rtb-06fb3502568e3172d",
            "subnet_id": "subnet-0bf2ba990a03f883c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_0",
            "module.vpc.aws_subnet.private_0",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f654fad40c01bf7c",
            "route_table_id": "rtb-09699e0a260cd4a7b",
            "subnet_id": "subnet-056f7d4693dc35524"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_1",
            "module.vpc.aws_subnet.private_1",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed4f79dd72857204",
            "route_table_id": "rtb-0f243d4fe98dab767",
            "subnet_id": "subnet-08b6401c11ffa0399"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f36b09696fd22348",
            "route_table_id": "rtb-0f243d4fe98dab767",
            "subnet_id": "subnet-0119be8ed52f832d4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_0",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046e714378edf7476",
            "route_table_id": "rtb-0f243d4fe98dab767",
            "subnet_id": "subnet-0bda924a2b2d2fa4e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-04ab649a8b2a6c7ec",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ab649a8b2a6c7ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3588377775",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04ab649a8b2a6c7ec",
            "security_group_rule_id": "sgr-003edb2272f3ea244",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.example",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-295494838",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04ab649a8b2a6c7ec",
            "security_group_rule_id": "sgr-017495cf85368a1b4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.example",
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-08609864a2b9937ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08609864a2b9937ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-0bf2ba990a03f883c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.65.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf2ba990a03f883c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-056f7d4693dc35524",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.66.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056f7d4693dc35524",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-08b6401c11ffa0399",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b6401c11ffa0399",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-0119be8ed52f832d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0119be8ed52f832d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:subnet/subnet-0bda924a2b2d2fa4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bda924a2b2d2fa4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730054542356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:vpc/vpc-0395c35850d47925c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0222366d2fd0c2d54",
            "default_route_table_id": "rtb-08ccb9c6eec05aa3f",
            "default_security_group_id": "sg-0146496f8479d0beb",
            "dhcp_options_id": "dopt-0180ecb3fda502724",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0395c35850d47925c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08ccb9c6eec05aa3f",
            "owner_id": "730054542356",
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.example_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:730054542356:security-group/sg-00b72467a378bcaac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b72467a378bcaac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "module-sg",
            "name_prefix": "",
            "owner_id": "730054542356",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0395c35850d47925c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.example_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-951948823",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00b72467a378bcaac",
            "security_group_rule_id": "sgr-04be3e5c2b7ba9496",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example",
            "module.vpc.module.example_sg.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.example_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-916507875",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00b72467a378bcaac",
            "security_group_rule_id": "sgr-03b004f33eda1cd9c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.example",
            "module.vpc.module.example_sg.aws_security_group.default"
          ]
        }
      ]
    }
  ]
}